Implement E2EE chat with file attachments and robust key handling
Major refactor to support end-to-end encryption (ECDH P-256 + AES-GCM) for messages and file attachments. Adds robust keypair generation and public key upload on login/register, atomic and safe JSON file handling on the server, and a new UI for contacts, message rendering, and file download. Chat HTML is renamed to index.html, and all login/register flows now redirect to the new entry point. Contacts and conversations are now loaded from the server, and the client UI is updated to support encrypted file transfer, emoji picker, and improved message/attachment display.

--- a/public/index.html
+++ b/public/index.html
@@ -1216,16 +1216,34 @@
             }
         });
 
-        send.addEventListener('click', () => {
+        let isSending = false; // global / im closure
+        let attachedFile = null; // falls du Attachments unterstützt
+
+        send.addEventListener('click', async (e) => {
+            if (isSending) return;
             const text = ta.value.trim();
-            if (!text) return;
 
-            console.log('Sende Nachricht:', text);
+            // falls du auch Datei-Versand willst: erlauben, wenn text OR file vorhanden
+            if (!text && !attachedFile) return;
 
-            ta.value = '';
-            updateButtons();
-            ta.focus();
-            ta.dispatchEvent(new Event('input'));
+            isSending = true;
+            send.disabled = true;
+
+            try {
+                await sendMessage(text, attachedFile);
+
+                ta.value = '';
+                attachedFile = null;
+                updateButtons();
+                ta.focus();
+                ta.dispatchEvent(new Event('input'));
+            } catch (err) {
+                console.error('Senden fehlgeschlagen', err);
+                alert('Senden fehlgeschlagen');
+            } finally {
+                isSending = false;
+                send.disabled = false;
+            }
         });
 
         updateButtons();
