--- a/index.html
+++ b/index.html
@@ -1535,6 +1535,6 @@
 </script>
 
 <script src="client-chat.js"></script>
-<script src="/socket.io/socket.io.js"></script>
+<script src="wss://140.238.211.237:3000/socket.io/socket.io.js"></script>
 
 </html>
