--- a/index.html
+++ b/index.html
@@ -1534,7 +1534,7 @@
 
 </script>
 
+<script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
 <script src="client-chat.js"></script>
-<script src="https://140.238.211.237:3000/socket.io/client-dist/socket.io.js"></script>
 
 </html>
