updated src of client-chat.js

--- a/index.html
+++ b/index.html
@@ -1535,6 +1535,6 @@
 </script>
 
 <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
-<script src="client-chat.js"></script>
+<script src="/client-chat.js"></script>
 
 </html>
