--- a/login/login.html
+++ b/login/login.html
@@ -34,6 +34,6 @@
     </div>
 </body>
 
-<script src="/login/client-login.js"></script>
+<script src="/chat/login/client-login.js"></script>
 
 </html>
