--- a/login/register.html
+++ b/login/register.html
@@ -50,6 +50,6 @@
     </div>
 </body>
 
-<script src="client-register.js"></script>
+<script src="/chat/login/client-register.js"></script>
 
 </html>
