--- a/login/register.html
+++ b/login/register.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/chat/login/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -50,6 +50,6 @@
     </div>
 </body>
 
-<script src="/chat/login/client-register.js"></script>
+<script src="client-register.js"></script>
 
 </html>
