Improve registration validation and UI for policies
Enhanced the registration process to require acceptance of terms and data policies, displaying error messages inline instead of alerts. Updated register.html to include policy checkboxes, improved password field types for both login and registration, and added corresponding CSS for checkbox groups. Also improved chat preview logic to better handle encrypted and unencrypted messages.

--- a/login/register.html
+++ b/login/register.html
@@ -34,7 +34,7 @@
                         <path
                             d="M240-80q-33 0-56.5-23.5T160-160v-400q0-33 23.5-56.5T240-640h40v-80q0-83 58.5-141.5T480-920q83 0 141.5 58.5T680-720v80h40q33 0 56.5 23.5T800-560v400q0 33-23.5 56.5T720-80H240Zm240-200q33 0 56.5-23.5T560-360q0-33-23.5-56.5T480-440q-33 0-56.5 23.5T400-360q0 33 23.5 56.5T480-280ZM360-640h240v-80q0-50-35-85t-85-35q-50 0-85 35t-35 85v80Z" />
                     </svg></label>
-                <input type="text" name="password" placeholder="Passwort" id="password" />
+                <input type="password" name="password" placeholder="Passwort" id="password" />
             </div>
             <div class="input-group">
                 <label><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
@@ -42,7 +42,19 @@
                         <path
                             d="M240-80q-33 0-56.5-23.5T160-160v-400q0-33 23.5-56.5T240-640h40v-80q0-83 58.5-141.5T480-920q83 0 141.5 58.5T680-720v80h40q33 0 56.5 23.5T800-560v400q0 33-23.5 56.5T720-80H240Zm240-200q33 0 56.5-23.5T560-360q0-33-23.5-56.5T480-440q-33 0-56.5 23.5T400-360q0 33 23.5 56.5T480-280ZM360-640h240v-80q0-50-35-85t-85-35q-50 0-85 35t-35 85v80Z" />
                     </svg></label>
-                <input type="text" name="repeat-password" placeholder="Passwort wiederholen" id="repeatPassword" />
+                <input type="password" name="repeat-password" placeholder="Passwort wiederholen" id="repeatPassword" />
+            </div>
+            <div class="checkbox-group">
+                <div class="topic">
+                    <p for="policy">Ich stimme den <a href="https://docs.github.com/de/site-policy">Nutzungsbedinungen
+                            von GitHub</a> zu.</p>
+                    <input type="checkbox" name="github-policy" value="github-policy_value" id="policy" required>
+                </div>
+                <div class="topic">
+                    <p for="policy">Ich stimme den <a href="https://chat-2.gitbook.io/chat/">Nutzungsbedinungen &
+                            Datenschutzbestimmungen</a> zu.</p>
+                    <input type="checkbox" name="data-policy" value="data-policy_value" id="data-policy" required>
+                </div>
             </div>
             <button type="submit">Registrieren</button>
             <p>Hast du schon ein Konto? <a href="login.html">Anmelden</a></p>
